# eightfold

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/adapters/: __init__.py
backend/app/api/: routes.py
backend/app/confidence/: __init__.py
backend/app/config/: settings.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/database/: __init__.py
backend/app/exceptions/: __init__.py
backend/app/extraction/: ner_extractor.py  regex_extractor.py  structured.py
backend/app/extractors/: resume_extractor.py  structured_extractors.py
backend/app/factories/: __init__.py
backend/app/fusion/: __init__.py
backend/app/interfaces/: __init__.py  extractor.py  parser.py
backend/app/middleware/: __init__.py
backend/app/models/: canonical.py  intermediate.py  metadata.py  requests.py  responses.py
backend/app/normalizers/: __init__.py
backend/app/parsers/: csv_parser.py  json_parser.py  pdf_parser.py  text_parser.py
backend/app/pipeline/: engine.py
backend/app/processing/: confidence.py  fusion.py  normalizer.py  projection.py  provenance.py
backend/app/projection/: __init__.py
backend/app/provenance/: __init__.py
backend/app/repositories/: __init__.py
backend/app/services/: candidate_service.py  pipeline.py
backend/app/sources/: csv_parser.py  github_connector.py  github_parser.py  linkedin_connector.py  linkedin_parser.py  parser_factory.py  (+1 more)
(+26 files in other folders)
