[project]
name = "eightfold-backend"
version = "0.1.0"
description = "Candidate Data Transformer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.12",
    "pdfplumber>=0.11.4",
    "pytesseract>=0.3.13",
    "Pillow>=10.4.0",
    "httpx>=0.27.2",
]
